packages/core/components/ListPicker/ListRow.module.css
.item {
    display: flex;
    flex-direction: row;
    align-content: center;
    font-size: 16px;
    margin: calc(var(--spacing) / 2) 0;
    overflow: hidden;
    white-space: nowrap;
    width: 100%;
}

.item > div {
    align-items: center;
    display: flex;
    font-size: smaller;
    min-width: 1.5em;
    width: 1.5em;
}

.item-container {
    background-color: var(--primary-background-color);
    border: none;
    border-radius: var(--small-border-radius);
    color: var(--primary-text-color);
    display: flex;
    justify-content: space-between;
    padding-left: 6px;
    width: 100%;
    height: 35px;
}

.item-container:hover:not(.disabled) {
    background-color: var(--highlight-background-color);
    border: none;
    color: var(--highlight-text-color);
}

.selected:not(:hover) {
    background-color: var(--secondary-background-color) !important;
    color: var(--secondary-text-color) !important;
}

.divider {
    background-color: var(--border-color);
    height: 1px;
    overflow: hidden;
    pointer-events: none; 
}

.item-container, .item-container label {
    cursor: pointer;
}

.item-container label > p {
    overflow: hidden;
    text-overflow: ellipsis;
}

.disabled label {
    cursor: not-allowed;
    opacity: 0.75;
}

.item-container > span {
    width: 100%;
}

.item-container i:not(:first-child) {
    margin-left: auto;
    padding-left: 6px;
}

.breadcrumbs {
    opacity: 0.55;
}

